# pcpu-toolchain

./: README.md  asm-install.sh  gcc-install.sh  install.sh  pce-install.sh
gcc-pcpu/: config.sub
gcc-pcpu/gcc/: config.gcc
gcc-pcpu/gcc/config/pcpu/: pcpu-protos.h  pcpu.c  pcpu.h  pcpu.md  pcpuold.md
gcc-pcpu/libgcc/: config.host
pcpu-pce/: .gitignore  CMakeLists.txt
pcpu-pce/include/: core.h  debbuger.h  loader.h  sd.h  vga.h
pcpu-pce/src/: core.cpp  debugger.cpp  loader.cpp  main.cpp  sd.cpp  vga.cpp
